[package]
name = "files-testing"
version = "0.1.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
license = "MIT"

[dependencies]
time = "0.1"
serde_json = "1"
rusqlite = "0.11"

[dependencies.clap]
version = "2"
default-features = false

[dependencies.libtest]
version = "*"
path = "../libtest"
